# brain-stream

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.ko.md  README.md  README.zh.md  docker-compose.dev.yml  docker-compose.yml
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/brainstream/: __init__.py  main.py
backend/src/brainstream/api/: __init__.py
backend/src/brainstream/api/v1/: articles.py  feed.py  profile.py  router.py  sources.py
backend/src/brainstream/cli/: __init__.py  main.py
backend/src/brainstream/core/: __init__.py  config.py  database.py  scheduler.py
backend/src/brainstream/llm/: __init__.py  base.py  claude_code.py  registry.py
backend/src/brainstream/models/: __init__.py  article.py  state.py
backend/src/brainstream/plugins/: __init__.py  base.py  registry.py
backend/src/brainstream/plugins/builtin/: __init__.py  anthropic_changelog.py  aws_whatsnew.py  gcp_release_notes.py  github_platform.py  github_releases.py  openai_changelog.py
backend/src/brainstream/schemas/: __init__.py  article.py
backend/src/brainstream/services/: __init__.py  collector.py  cooccurrence.py  feed.py  processor.py  relevance.py  topology.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/test_plugins/: test_aws_whatsnew.py
commands/: config.md  digest.md  explore.md  setup.md
config/: sources.json
docs/design/: discovery-acceleration.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: ArticleCard.tsx  Layout.tsx
frontend/src/pages/: Feed.tsx  Settings.tsx
frontend/src/types/: index.ts
