[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainstream"
version = "2.0.0"
description = "Intelligence hub for engineers - topology-based serendipity discovery"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BrainStream Contributors" }
]
keywords = ["cloud", "ai", "news", "serendipity", "topology", "thompson-sampling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Vector Store
    "chromadb>=0.5.0",

    # Embeddings & ML
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.38",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",

    # State Management
    "aiosqlite>=0.19.0",

    # Data Collection
    "feedparser>=6.0.10",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
brainstream = "brainstream.cli.main:app"

[project.urls]
Homepage = "https://github.com/xxx/brain-stream"
Repository = "https://github.com/xxx/brain-stream"

[tool.hatch.build.targets.wheel]
packages = ["src/brainstream"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["brainstream"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
